<resources>
    <string name="app_name">Wave</string>
    <string name="version" translatable="false">1.7</string>
    <string name="salam">Salam</string>
    <string name="action_settings">Settings</string>
    <string name="succes">Succes</string>
    <string name="errorconection">Connection error</string>
    <string name="errorproblem">A unknown problem happened</string>
    <string name="errorfunblock">First unblock this person.</string>
    <string name="errorblock">Sorry,This person has blocked you.</string>
    <string name="insertfeedback">Please insert your feedback.</string>
    <string name="geyhan">Geyhan</string>
    <string name="my_wave">My wave</string>
    <string name="station">Station</string>
    <string name="takecamera">Take from camera</string>
    <string name="takegallery">Select from gallery</string>
    <string name="selectpic">Select Picture</string>
    <string name="uploadingstart">uploading started…</string>
    <string name="onback">Press once again to exit</string>
    <string name="Soshianet_Group">Soshianet</string>
    <string name="gift_for_God">A gift for God</string>
    <string name="name">Name</string>
    <string name="support">Support</string>
    <string name="subject">Subject</string>
    <string name="feedback">Feedback</string>
    <string name="policies">Policies</string>
    <string name="insertname">Congratulations:-) you are a new Wave member.Please insert your name and your frequency.</string>
    <string name="frequency">Frequency (This is your username)</string>
    <string name="phonelogin1txt">Please,Insert your Phone number.you will send us SMS</string>
    <string name="cyc">Choose your country</string>
    <string name="yuo">Your use of our services means that you accept our terms and policies</string>
    <string name="exdate">This version of Wave extinct. Download the new version. Thank you:-)</string>
    <string name="download">Download</string>
    <string name="saynew">Say New</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="insertpf">Please insert your frequency and your password</string>
</resources>