<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:background="@color/design_fab_stroke_end_inner_color"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salam"
        android:id="@+id/hi"
        android:textColor="@color/design_fab_shadow_start_color"
        android:textSize="50sp"
        android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:textAlignment="center" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout4"
        android:layout_below="@+id/imageView1" android:layout_alignStart="@+id/imageView1"
        android:layout_alignEnd="@+id/imageView1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/design_fab_shadow_start_color"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" android:background="@color/colorAccent"
        android:id="@+id/exdatela" android:visibility="invisible">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:text="@string/download"
            android:id="@+id/download" android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exdate"
            android:id="@+id/exdate" android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center" android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/download" android:gravity="center_vertical|center|center_horizontal"
            android:textSize="20sp" android:textIsSelectable="false" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift_for_God"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/design_fab_shadow_start_color"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_above="@+id/exdatela" android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"/>
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>