<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_fab_stroke_end_inner_color"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saynew"
        android:id="@+id/hi"
        android:textColor="@color/design_fab_shadow_start_color"
        android:textSize="50sp"
        android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout4"
        android:layout_below="@+id/imageView1" android:layout_alignStart="@+id/imageView1"
        android:layout_alignEnd="@+id/imageView1">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/design_fab_shadow_start_color"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>


    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gift_for_God"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/design_fab_shadow_start_color"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>